--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
   position: relative;
   height: 80vh;
   border-radius: 20px;
-  margin: 10px;
+  margin: 0.3%;
   cursor: pointer;
   color: #fff;
   flex: 1;
@@ -37,9 +37,9 @@ body {
 
 .slide h3 {
   position: absolute;
-  font-size: 24px;
-  bottom: 20px;
-  left: 20px;
+  font-size: 5rem;
+  bottom: 2%;
+  left: 2%;
   margin: 0;
   opacity: 0;
 }
